--- a/index.html
+++ b/index.html
@@ -288,7 +288,9 @@
 		</div>
     <script language="JavaScript">
 		var user_id = "";
+		var part_list_obj = $("#part_list");
 		var part_list_options = "";
+		var supplier_list_obj = $("#supplier_list");
 		var supplier_list_options = "";
 		var tab_page_name = "";
 		var bom_node_array = new Array();
