--- a/index.html
+++ b/index.html
@@ -304,8 +304,8 @@
 		
 		
 		$(document).on({
-			ajaxStart: function() { $("body").addClass("loading"); },
-			ajaxStop: function() { $("body").removeClass("loading"); }
+			ajaxStart: function() { body.addClass("loading"); },
+			ajaxStop: function() { body.removeClass("loading"); }
 		});
 
 		$(document).ready(function(){
