--- a/index.html
+++ b/index.html
@@ -14,19 +14,10 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/bootstrap-table.min.css">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-		<style>
-		.slide_toggle {
-			text-align: center;
-			cursor: pointer;
-			font-weight: bold;
-			line-height: 170%;
-			background-color: #eed;
-			border-radius: 7px;
-		}
-		.slide_toggle + div {
-			display: none;
-			margin-top: 10px;
-		}
+		
+		<style type="text/css">
+			.panel{margin:0px;padding:5px;text-align:center;background:#e5eecc;border:solid 1px #c3c3c3;display:none;}
+			.flip{margin:0px;padding:5px;text-align:center;background:#e5eecc;border:solid 1px #c3c3c3;}
 		</style>
 		
 		<!-- Bootstrap core JavaScript -->
@@ -42,9 +33,22 @@
 		
 
 	</head>
-	<div class="slide_toggle">填入收合提示文字</div>
-	<div>填入隱藏的說明內容</div>
-	<div class="slide_toggle">填入收合提示文字</div>
-	<div>填入隱藏的說明內容</div>
+	<div class="panel">
+	<p>晨星博客 – 专注网站SEO优化及wordpress主题开发</p>
+	</div>
+	<p class="flip">
+	  <span class="1">展开</span>
+	  <span class="2" style="display:none;">收起</span>
+	</p>
+	
+	
+	<script>
+	$(function(){
+	$(".flip").click(function(){
+		$(".panel").slideToggle("slow");
+		$(".xs1").toggle();
+		$(".xs2").toggle();
+	  });});
+	</script>
 </body>
 </html>
