--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	</p>
 	
 	
-	<script>
+	<script type="text/javascript">
 	$(function(){
 	$(".flip").click(function(){
 		$(".panel").slideToggle("slow");
