--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<p>晨星博客 – 专注网站SEO优化及wordpress主题开发</p>
 	</div>
 	<p class="flip">
-	  <span class="1">展开</span>
+	  <span class="1">測試</span>
 	  <span class="2" style="display:none;">收起</span>
 	</p>
 	<div class="panel">
