--- a/index.html
+++ b/index.html
@@ -1,60 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<!DOCTYPE html>
 <html lang="zh-tw">
-	<head>
-	
-	
-	
-		<meta charset="utf-8">
-		<meta name="google-signin-client_id" content="65164552845-kt5nqknig8520gtv3o66aqej0t5a2pfp.apps.googleusercontent.com">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="description" content="">
-		<meta name="author" content="">
-		<!-- Bootstrap core CSS -->
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/bootstrap-table.min.css">
-		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-		
-		<style type="text/css">
-			.panel{margin:0px;padding:5px;text-align:center;background:#e5eecc;border:solid 1px #c3c3c3;display:none;}
-			.flip{margin:0px;padding:5px;text-align:center;background:#e5eecc;border:solid 1px #c3c3c3;}
-		</style>
-		
-		<!-- Bootstrap core JavaScript -->
-		<script src="/CoreScripts/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/bootstrap-table.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/extensions/multiple-search/bootstrap-table-multiple-search.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/locale/bootstrap-table-zh-TW.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/locale/bootstrap-table-zh-TW.min.js"></script>
-		<script src="/CoreScripts/bootstrap-table-export.js"></script>
-		<script src="/CoreScripts/tableExport.js"></script>
-		<script src="/CoreScripts/ga.js"></script>
-		
-
-	</head>
-
-	<p class="flip">
-	  <span class="1">展开</span>
-	  <span class="2" style="display:none;">收起</span>
-	</p>
-	<div class="panel">
-	<p>晨星博客 – 专注网站SEO优化及wordpress主题开发</p>
-	</div>
-	<p class="flip">
-	  <span class="1">測試</span>
-	  <span class="2" style="display:none;">收起</span>
-	</p>
-	<div class="panel">
-	<p>晨星博客 – 专注网站SEO优化及wordpress主题开发</p>
-	</div>
-	<script type="text/javascript">
-	$(function(){
-	$(".flip").click(function(){
-		$(".panel").slideToggle("fast");
-		$(".xs1").toggle();
-		$(".xs2").toggle();
-	  });});
-	</script>
-</body>
+<FRAMESET COLS="200,*" >
+　<FRAME SRC="menu.htm" NAME="1"> 
+　<FRAME SRC="b.htm" NAME="2"> 
+</FRAMESET>
 </html>
