--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,14 @@
 		<meta charset="utf-8">
 		<script src="/CoreScripts/jquery.min.js"></script>
 		<style> 
+		
+			body
+			{
+				margin: 0px;
+				background: #66b3ff; 
+			}
 			.flip {
+				padding: 5px;
 				text-align: center;
 				background-color: #66b3ff;
 				border: solid 1px #c3c3c3;
@@ -14,6 +21,7 @@
 			}
 		  
 			.panel {
+				padding: 5px;
 				text-align: center;
 				background-color: #bbffff;
 				border: solid 1px #c3c3c3;
