--- a/menu.html
+++ b/menu.html
@@ -18,6 +18,7 @@
 				color: #750000;
 				font-weight: bold;
 				font-family: Monospace, Courier New, sans-serif;
+				cursor: pointer;
 			}
 		  
 			.panel {
@@ -29,9 +30,11 @@
 				color: #c6a300;
 				font-weight: bold;
 				font-family: Monospace, Courier New, sans-serif;
+				cursor: pointer;
 			}
 		</style>
 	</head>
+	<div class="flip" id="0" onclick="javascript:location.href='http://www.google.com'" target="Display" >首頁</div>
 	<div class="flip" id="1" >查詢</div>
 	<div class="panel" id="home">Hello world!</div>
 	<div class="flip" id="2" >新增料件</div>
