--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html lang="zh-tw">
 <FRAMESET COLS="200,*" >
 　<FRAME SRC="menu.html" NAME="Menu"> 
-　<FRAME SRC="Welcome.html" NAME="Display"> 
+　<FRAME SRC="welcome.html" NAME="Display"> 
 </FRAMESET>
 </html>
