--- a/welcome.html
+++ b/welcome.html
@@ -34,6 +34,7 @@
 			}
 		</style>
 	</head>
+	<div class="flip" id="0" onclick="javascript:location.href='http://www.google.com'" target="Display" >首頁</div>
 	<div class="flip" id="1" >查詢</div>
 	<div class="panel" id="home">Hello world!</div>
 	<div class="flip" id="2" >新增料件</div>
