--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <html lang="zh-tw">
 <FRAMESET COLS="200,*" >
-　<FRAME SRC="menu.html" NAME="Menu"> 
-　<FRAME SRC="welcome.html" NAME="Display"> 
+	<FRAME SRC="menu.html" NAME="1">
+	<FRAME SRC="b.html" NAME="2">
 </FRAMESET>
 </html>
