--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <html lang="zh-tw">
 <FRAMESET COLS="200,*" >
-	<FRAME SRC="menu.html" NAME="1">
-	<FRAME SRC="b.html" NAME="2">
+	<FRAME SRC="menu.html" NAME="frame_menu">
+	<FRAME SRC="b.html" NAME="frame_display">
 </FRAMESET>
 </html>
