--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
 				margin: 0px;
 				background: #ffffff;
 			}
-			.flip {
+			.flip .nonepanel {
 				padding: 5px;
 				text-align: center;
 				background-color: #66b3ff;
@@ -34,6 +34,7 @@
 			}
 		</style>
 	</head>
+	<div class="nonepanel" id="0" onclick="javascript:location.href='http://www.google.com'" target="Display" >首頁</div>
 	<div class="flip" id="1" >查詢</div>
 	<div class="panel" id="home">Hello world!</div>
 	<div class="flip" id="2" >新增料件</div>
