--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
 				margin: 0px;
 				background: #ffffff;
 			}
-			.flip .nonepanel {
+			.flip , .nonepanel {
 				padding: 5px;
 				text-align: center;
 				background-color: #66b3ff;
