--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE html>
 <html lang="zh-tw">
-<FRAMESET COLS="200,*" >
-	<FRAME SRC="menu.html" NAME="frame_menu">
-	<FRAME SRC="b.html" NAME="frame_display">
-</FRAMESET>
+<frameset COLS="200,*" >
+	<frame src="menu.html" name="frame_menu">
+	<frame src="b.html" name="frame_display">
+</frameset>
 </html>
