--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <html lang="zh-tw">
 <frameset COLS="200,*" >
 	<frame src="menu.html" name="frame_menu">
-	<frame src="b.html" name="frame_display">
+	<frame src="welcome.html" name="frame_display">
 </frameset>
 </html>
