--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
 				background: #ffffff;
 			}
 			
-			.flip .nonepanel {
+			.flip , .nonepanel, .panel {
 				padding: 5px;
 				text-align: center;
 				background-color: #66b3ff;
@@ -22,15 +22,9 @@
 			}
 		  
 			.panel {
-				padding: 5px;
-				text-align: center;
 				background-color: #bbffff;
-				border: solid 1px #c3c3c3;
 				display: none;
 				color: #c6a300;
-				font-weight: bold;
-				font-family: Monospace, Courier New, sans-serif;
-				cursor: pointer;
 			}
 		</style>
 	</head>
@@ -89,7 +83,7 @@
 			});
 			
 			$(document).ready(function(){
-				alert("1");
+				alert("2");
 			});
 		</script>
 	</body>
