--- a/menu.html
+++ b/menu.html
@@ -29,7 +29,8 @@
 		</style>
 	</head>
 	<body>
-		<div class="nonepanel" id="0" onclick="javascript:location.href='http://www.google.com'" target="frame_display" >首頁</div>
+	
+		<div class="nonepanel" id="0" onclick="window.open( 'www.google.com', 'frame_display' )" >首頁</div>
 		<div class="flip" id="1" >查詢</div>
 		<div class="panel" id="home">Hello world!</div>
 		<div class="flip" id="2" >新增料件</div>
@@ -83,7 +84,7 @@
 			});
 			
 			$(document).ready(function(){
-				alert("2");
+				alert("3");
 			});
 		</script>
 	</body>
