--- a/menu.html
+++ b/menu.html
@@ -29,10 +29,9 @@
 		</style>
 	</head>
 	<body>
-	
 		<div class="nonepanel" id="0" onclick="window.open( 'www.google.com', 'frame_display' )" >首頁</div>
 		<div class="flip" id="1" >查詢</div>
-		<div class="panel" id="home">Hello world!</div>
+		<div class="panel" id="home" onclick="window.open( 'search_number.html', 'frame_display' )">查詢品號</div>
 		<div class="flip" id="2" >新增料件</div>
 		<div class="panel" id="menu1">Hello world!</div>
 		<div class="flip" id="3" >新增成品/半成品</div>
@@ -84,7 +83,7 @@
 			});
 			
 			$(document).ready(function(){
-				alert("3");
+				alert("4");
 			});
 		</script>
 	</body>
