--- a/menu.html
+++ b/menu.html
@@ -31,7 +31,10 @@
 	<body>
 		<div class="nonepanel" id="0" onclick="window.open( 'www.google.com', 'frame_display' )" >首頁</div>
 		<div class="flip" id="1" >查詢</div>
-		<div class="panel" id="home" onclick="window.open( 'search_number.html', 'frame_display' )">查詢品號</div>
+		<div class="panel" id="home" >
+		<br id="home" onclick="window.open( 'search_number.html', 'frame_display' )"> 查詢品號
+		<br id="home" onclick="window.open( 'create_number.html', 'frame_display' )"> 創建品號
+		</div>
 		<div class="flip" id="2" >新增料件</div>
 		<div class="panel" id="menu1">Hello world!</div>
 		<div class="flip" id="3" >新增成品/半成品</div>
@@ -83,7 +86,7 @@
 			});
 			
 			$(document).ready(function(){
-				alert("4");
+				alert("5");
 			});
 		</script>
 	</body>
