--- a/menu.html
+++ b/menu.html
@@ -32,8 +32,8 @@
 		<div class="nonepanel" id="0" onclick="window.open( 'www.google.com', 'frame_display' )" >首頁</div>
 		<div class="flip" id="1" >查詢</div>
 		<div class="panel" id="home" >
-		<br id="home" onclick="window.open( 'search_number.html', 'frame_display' )"> 查詢品號
-		<br id="home" onclick="window.open( 'create_number.html', 'frame_display' )"> 創建品號
+			<div onclick="window.open( 'search_number.html', 'frame_display' )">查詢品號</div>
+			<div onclick="window.open( 'create_number.html', 'frame_display' )">創建品號</div>
 		</div>
 		<div class="flip" id="2" >新增料件</div>
 		<div class="panel" id="menu1">Hello world!</div>
@@ -86,7 +86,7 @@
 			});
 			
 			$(document).ready(function(){
-				alert("5");
+				alert("6");
 			});
 		</script>
 	</body>
