--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="zh-tw">
 <frameset COLS="200,*" >
-	<frame src="menu.html" name="frame_menu">
-	<frame src="welcome.html" name="frame_display">
+	<frame src="page/menu.html" name="frame_menu">
+	<frame src="page/welcome.html" name="frame_display">
 </frameset>
 </html>
