--- a/index.html
+++ b/index.html
@@ -1,8 +1,27 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html>
 <html lang="zh-tw">
+<head>
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/bootstrap-table.min.css">
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="/css/style.css">
+	<script src="/CoreScripts/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/bootstrap-table.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/extensions/multiple-search/bootstrap-table-multiple-search.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/locale/bootstrap-table-zh-TW.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/locale/bootstrap-table-zh-TW.min.js"></script>
+	<script src="/CoreScripts/bootstrap-table-export.js"></script>
+	<script src="/CoreScripts/tableExport.js"></script>	
+</head>
 <frameset COLS="200,*" >
 	<frame src="page/menu.html" name="frame_menu">
 	<frame src="page/welcome.html" name="frame_display">
 </frameset>
+<script type="text/javascript" src="/SubScripts/db_receive.js"></script>
+<script type="text/javascript" src="/SubScripts/db_send.js"></script>
+<script type="text/javascript" src="/SubScripts/macro_receive.js"></script>
+<script type="text/javascript" src="/SubScripts/set_table_style.js"></script>
 </html>
