--- a/index.html
+++ b/index.html
@@ -2,20 +2,21 @@
 <!DOCTYPE html>
 <html lang="zh-tw">
 <head>
-	<meta charset="utf-8">
-	<script src="/CoreScripts/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/bootstrap-table.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/extensions/multiple-search/bootstrap-table-multiple-search.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/locale/bootstrap-table-zh-TW.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/locale/bootstrap-table-zh-TW.min.js"></script>
-	<script src="/CoreScripts/bootstrap-table-export.js"></script>
-	<script src="/CoreScripts/tableExport.js"></script>	
+	<link rel="stylesheet" href="/css/style.css">
 </head>
-<frameset COLS="200,*" >
-	<frame src="page/menu.html" name="frame_menu">
-	<frame src="page/welcome.html" name="frame_display">
-</frameset>
+<body>
+	<frameset COLS="200,*" >
+		<frame src="page/menu.html" name="frame_menu">
+		<frame src="page/welcome.html" name="frame_display">
+	</frameset>
+</body>
+<script language="JavaScript">
+	var body = $("body");
+	$(document).on({
+		ajaxStart: function() { body.addClass("loading"); },
+		ajaxStop: function() { body.removeClass("loading"); }
+	});
+</script>
 <script type="text/javascript" src="/SubScripts/db_receive.js"></script>
 <script type="text/javascript" src="/SubScripts/db_send.js"></script>
 <script type="text/javascript" src="/SubScripts/macro_receive.js"></script>
