--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html>
 <html lang="zh-tw">
-<frameset COLS="200,*" >
+<frameset COLS="200,*" frameborder="0" border=0 framespacing="2"  >
 	<frame src="page/menu.html" name="frame_menu">
 	<frame src="page/welcome.html" name="frame_display">
 </frameset>
